# trading

./: .gitignore  CHANGELOG.md  CODE_STYLE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 00_Vision.md  01_PLAN.md  01_Project_Overview.md  02_Architecture.md  03_TRADING_SYSTEM_SPEC.md  03_Trading_System.md  04_SETUP_LIBRARY.md  04_Setups.md  05_Risk_Management.md  05_TRIGGER_LIBRARY.md  06_Backtesting.md  06_RISK_ENGINE.md  07_Optimization.md  07_PROBABILITY_ENGINE.md  08_Roadmap.md
pine/indicator/: Alerts.pine  Core.pine  Dashboard.pine  MomentumEngine.pine  RiskEngine.pine  SetupEngine.pine  TrendEngine.pine  TriggerEngine.pine  VolumeEngine.pine
pine/release/: v0.1.pine  v1.0.pine
pine/strategy/: Strategy.pine
python/: __init__.py  main.py
python/backtesting/: __init__.py  backtester.py  signals.py
python/downloader/: __init__.py  downloader.py
python/features/: __init__.py  engineer.py
python/indicators/: __init__.py  simple.py
python/ml/: __init__.py
python/models/: data_model.py
python/optimizer/: __init__.py  grid_search.py
python/probability/: __init__.py
python/reports/: __init__.py  reporting.py
python/risk/: __init__.py
python/setups/: __init__.py
python/strategy/: __init__.py
python/triggers/: __init__.py
scripts/: build.sh  register_task.ps1  release.sh  validate_pine.sh
tests/python/: test_backtester.py  test_downloader.py  test_features.py  test_main.py
